--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
       </p> -->
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method = "POST", action = "/tweets/">
+        <form method = "POST", action = "/tweets">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
           <div>
