--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
@@ -60,7 +61,7 @@
         <form method = "POST", action = "/tweets">
           <label for="tweet-text">What are you humming about?</label>
           <br/>
-          <span><textarea name="text" id="tweet-text"></textarea></span>
+          <textarea name="text" id="tweet-text"></textarea>
           <div class="button-counter">
             <button type="submit" class="button">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
