add html and css for tweet display

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,36 @@
           </div>
         </form>
       </section>
+      <secion class="all-tweets">
+        <article class = "tweet">
+          <header></header>
+          <div>
+          This is my first tweet,this is my first tweet,this is my first tweet,this is my first tweet,this is my first tweet
+          </div>
+          <footer>
+            <span>2 days ago</span>
+            <span>
+            <i class="fa-solid fa-flag"></i>
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-retweet"></i>
+            </span>
+          </footer>
+        </article>
+        <article class = "tweet">
+          <header></header>
+          <div>
+          This is my second tweet,this is my second tweet,this is my second tweet,this is my second tweet,this is my second tweet
+          </div>
+          <footer>
+            <span>2 days ago</span>
+            <span>
+            <i class="fa-solid fa-flag"></i>
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-retweet"></i>
+            </span>
+          </footer>
+        </article>
+      </secion>
     </main>
   </body>
 </html>
