--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,6 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <!-- <h1>test</h1>
-      <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...
-      </p> -->
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form method = "POST", action = "/tweets">
@@ -69,8 +66,8 @@
           </div>
         </form>
       </section>
-      <secion class="all-tweets">
-        <article class = "tweet">
+      <secion id="all-tweets">
+        <!-- <article class = "tweet">
           <header></header>
           <div>
           This is my first tweet,this is my first tweet,this is my first tweet,this is my first tweet,this is my first tweet
@@ -97,7 +94,7 @@
             <i class="fa-solid fa-retweet"></i>
             </span>
           </footer>
-        </article>
+        </article> -->
       </secion>
     </main>
   </body>
