replace the error message window alert with slideup/slidedown within the event handler

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,9 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <secion class="error">
+        <p id="error-message"></p>
+      </secion>
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form id="postNewTweet",method = "POST", action = "/tweets">
