--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script type="text/javascript" src="/scripts/form.js"></script>
     <script type="text/javascript" src="/scripts/composer.js"></script>
+
   </head>
 
   <body>
